--- a/style.css
+++ b/style.css
@@ -1,1 +1,121 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Kumbh Sans", sans-serif;
+}
+
+.line {
+  width: 100%;
+  height: 0.1rem;
+  background: #e7e8ea;
+}
+
+.hide {
+  display: none;
+}
+
+.rotateUp {
+  animation: rotate45Deg 1s forwards;
+  transition: all 1s linear;
+}
+@keyframes rotate45Deg {
+  100% {
+    transform: rotate(180deg);
+  }
+}
+
+.rotateDown {
+  animation: rotate45Deg 1s forwards;
+  transition: all 1s linear;
+}
+@keyframes rotate45Deg {
+  100% {
+    transform: rotate(-180deg);
+  }
+}
+
+main {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 2.4rem;
+  background: linear-gradient(to bottom, hsl(273deg, 75%, 66%), hsl(240deg, 73%, 65%));
+}
+
+.card {
+  background: #fff;
+  border-radius: 3rem;
+  width: 32.7rem;
+  min-height: 53.5rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: flex-end;
+  align-items: center;
+}
+.card__image--1 {
+  position: absolute;
+  width: 23.7rem;
+  height: 18rem;
+  left: 4.5rem;
+  top: -11rem;
+}
+.card__image--2 {
+  position: absolute;
+  width: 24rem;
+  top: 0;
+}
+.card__content {
+  width: 27.9rem;
+  height: auto;
+  text-align: center;
+  margin-bottom: 4.8rem;
+  margin-top: 13.2rem;
+}
+.card__title {
+  font-size: 3.2rem;
+  font-weight: 700;
+  margin-bottom: 3.8rem;
+}
+
+.faq__list {
+  list-style: none;
+  align-self: flex-start;
+  transition: all 0.5 ease-in;
+}
+.faq__titleBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 3.4rem;
+}
+.faq__text {
+  color: #787887;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  text-align: start;
+  margin: 1.2rem 0;
+}
+.faq__title {
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: #4b4c5f;
+}
+.faq__title:hover {
+  cursor: pointer;
+  color: #f37b56;
+}
