Add javascript to hide and show accordion content

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -45,7 +45,6 @@
   &__list {
     list-style: none;
     align-self: flex-start;
-    transition: all 0.5 ease-in;
   }
 
   &__titleBox {
@@ -53,6 +52,10 @@
     justify-content: space-between;
     align-items: center;
     height: 3.4rem;
+
+    & img {
+      transition: all 0.5s linear;
+    }
   }
 
   &__text {
