--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,6 +2,7 @@
   background: #fff;
   border-radius: 3rem;
   width: 32.7rem;
+  max-width: 32.7rem;
   min-height: 53.5rem;
   position: relative;
   display: flex;
