--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ body {
   display: none;
 }
 
-.rotateUp {
-  transition: all 2s linear;
+.rotate {
   transform: rotate(180deg);
 }
 
@@ -44,6 +43,7 @@ main {
   background: #fff;
   border-radius: 3rem;
   width: 32.7rem;
+  max-width: 32.7rem;
   min-height: 53.5rem;
   position: relative;
   display: flex;
