--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,7 +6,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex-shrink: 0;
   justify-content: flex-end;
   align-items: center;
 
@@ -32,6 +32,8 @@
     text-align: center;
     margin-bottom: 4.8rem;
     margin-top: 13.2rem;
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
   }
 
   &__title {
