--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main {
   position: relative;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex-shrink: 0;
   justify-content: flex-end;
   align-items: center;
 }
@@ -69,6 +69,8 @@ main {
   text-align: center;
   margin-bottom: 4.8rem;
   margin-top: 13.2rem;
+  margin-left: 2.4rem;
+  margin-right: 2.4rem;
 }
 .card__title {
   font-size: 3.2rem;
