Finish desktop version

--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -5,7 +5,8 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 2.4rem;
+
+  position: relative;
 
   background: linear-gradient(
     to bottom,
