--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -79,3 +79,75 @@
     }
   }
 }
+
+@media screen and (min-width: 1440px) {
+  .card {
+    width: 92rem;
+    min-height: 50.9rem;
+    flex-direction: row;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
+    &__image {
+      &--1 {
+        content: url('../../images/illustration-woman-online-desktop.svg');
+        width: 47.2rem;
+        height: 35.9rem;
+        top: 7.1rem;
+        left: -8.2rem;
+        z-index: 1;
+      }
+
+      &--2 {
+        content: url('../../images/bg-pattern-desktop.svg');
+        width: 96.4rem;
+        height: 94.4rem;
+        top: -30rem;
+        left: -57.3rem;
+        z-index: 0;
+      }
+
+      &--3 {
+        position: absolute;
+        object-fit: cover;
+        object-position: center;
+        z-index: 2;
+        top: 45.8%;
+        left: 11.8%;
+      }
+    }
+
+    &__content {
+      width: 50%;
+      margin: 0;
+      margin-right: 4.5rem;
+      padding: 4rem 0;
+    }
+
+    &__title {
+      width: 35rem;
+      text-align: start;
+      margin-bottom: 4.3rem;
+    }
+  }
+
+  .faq {
+    &__list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__item {
+      width: 35rem;
+    }
+
+    &__text {
+      font-size: 1.4rem;
+    }
+
+    &__title {
+      font-size: 1.4rem;
+    }
+  }
+}
